# TetrisGame_lessons

./: CMakeLists.txt  README.md
TetrisCore/: CMakeLists.txt
TetrisCore/includes/TetrisCore/: block.h  blocks.cpp  colors.h  grid.h  position.h
TetrisCore/src/TetrisCore/: block.cpp  colors.cpp  grid.cpp  position.cpp
TetrisEditor/: CMakeLists.txt
TetrisEditor/src/: main.cpp
